--- a/app/src/main/res/layout/base_toolbar_layout.xml
+++ b/app/src/main/res/layout/base_toolbar_layout.xml
@@ -49,7 +49,7 @@
             </LinearLayout>
 
             <ImageButton
-                android:id="@+id/btOptionMenu"
+                android:id="@+id/btnProfileMenu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
@@ -57,20 +57,9 @@
                 android:foreground="?android:attr/selectableItemBackground"
                 android:paddingTop="25dp"
                 android:paddingRight="16dp"
-                android:src="@drawable/ic_log_out"
-                android:tint="?attr/textWhiteColor" />
-
-            <ImageButton
-                android:id="@+id/btBack"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_toLeftOf="@+id/btOptionMenu"
-                android:background="@android:color/transparent"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:paddingTop="25dp"
-                android:paddingRight="16dp"
-                android:src="@drawable/ic_log_out"
+                android:paddingBottom="25dp"
+                android:paddingLeft="16dp"
+                android:src="@drawable/ic_profile"
                 android:tint="?attr/textWhiteColor" />
 
 
