--- a/app/src/main/res/layout/base_toolbar_layout.xml
+++ b/app/src/main/res/layout/base_toolbar_layout.xml
@@ -30,8 +30,9 @@
                     android:layout_width="48dp"
                     android:layout_height="48dp"
                     android:paddingLeft="16dp"
-                    android:src="@mipmap/ic_launcher_round"
-                    android:visibility="gone" />
+                    android:src="@drawable/ic_logo"
+                    android:tint="@color/putih"
+                    android:visibility="visible" />
 
                 <TextView
                     android:id="@+id/tvToolbarTitle"
