--- a/app/src/main/res/layout/fragment_form_task.xml
+++ b/app/src/main/res/layout/fragment_form_task.xml
@@ -7,22 +7,26 @@
     >
 
     <EditText
-            android:id="@+id/etNameTask"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:hint="@string/name" />
+        android:id="@+id/etNameTask"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="@string/name"
+        android:inputType="textPersonName"
+        android:backgroundTint="@color/orenPudar"
+        android:textColorHint="@color/orenPudar"/>
 
-        <EditText
-            android:id="@+id/etDescTask"
-            android:layout_width="match_parent"
-            android:layout_height="303dp"
-            android:layout_below="@id/etNameTask"
-            android:ems="10"
-            android:gravity="start|top"
-            android:inputType="textMultiLine"
-            android:hint="@string/desc"/>
+    <EditText
+        android:id="@+id/etDescTask"
+        android:layout_width="match_parent"
+        android:layout_height="303dp"
+        android:layout_below="@id/etNameTask"
+        android:ems="10"
+        android:gravity="start|top"
+        android:inputType="textMultiLine"
+        android:hint="@string/desc"
+        android:backgroundTint="@color/orenPudar"
+        android:textColorHint="@color/orenPudar"/>
 
     <Button
         android:id="@+id/btnSave"
@@ -30,23 +34,12 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/etDescTask"
         android:layout_marginTop="67dp"
-        android:layout_marginEnd="18dp"
+        android:layout_marginEnd="9dp"
         android:layout_marginRight="18dp"
-        android:layout_toStartOf="@id/btnCancel"
-        android:layout_toLeftOf="@id/btnCancel"
-        android:text="@string/add" />
-
-    <Button
-        android:id="@+id/btnCancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/etDescTask"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="66dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginRight="10dp"
-        android:text="@string/cancel" />
+        android:text="@string/add"
+        android:backgroundTint="@color/orenJeruk"
+        android:textColor="@color/putih"/>
 
     <Button
         android:id="@+id/btnDelete"
@@ -54,7 +47,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/etDescTask"
         android:layout_marginTop="68dp"
-        android:text="Delete" />
+        android:text="Delete"
+        android:backgroundTint="@color/merah"
+        android:textColor="@color/putih"/>
 
     <Button
         android:id="@+id/btnShare"
@@ -66,7 +61,9 @@
         android:layout_marginTop="-1dp"
         android:layout_marginEnd="9dp"
         android:layout_toEndOf="@+id/cbStatus"
-        android:text="@string/share" />
+        android:text="@string/share"
+        android:backgroundTint="@color/ijo"
+        android:textColor="@color/putih" />
 
     <CheckBox
         android:id="@+id/cbStatus"
@@ -74,6 +71,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/etDescTask"
         android:layout_marginTop="6dp"
-        android:text="@string/done" />
-
+        android:text="@string/done"
+        android:buttonTint="@color/orenPudar"
+        android:textColor="@color/orenJeruk"/>
 </RelativeLayout>
