--- a/app/src/main/res/layout/fragment_list_task.xml
+++ b/app/src/main/res/layout/fragment_list_task.xml
@@ -6,18 +6,33 @@
     android:padding="10dp"
     >
 
+    <TextView
+        android:id="@+id/tvIsEmpty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/empty"
+        android:layout_centerInParent="true"
+        android:visibility="gone"
+        />
     <ListView
         android:id="@+id/lvListTask"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:divider="@color/orenPutih"
+        android:dividerHeight="5dp"
+        >
+    </ListView>
+
+    <Button
+        android:id="@+id/createTaskBtn"
+        android:backgroundTint="@color/orenJeruk"
+        android:textColor="@color/putih"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/create_task"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 
-        <Button
-            android:id="@+id/createTaskBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/create_task"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
 </RelativeLayout>
