--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,23 +3,16 @@
 <!--    <color name="colorPrimary">#ff0000</color>-->
 <!--    <color name="colorPrimaryDark">#ff0000</color>-->
 <!--    <color name="colorAccent">#0000ff</color>-->
-    <color name="addBtn">#57bd7e</color>
-    <color name="primary">#2694bf</color>
-    <color name="secondary">#8ad1ed</color>
-
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
-
-
-    <!--My Color-->
-    <color name="myPrimary">#128C7E</color>
-    <color name="myPrimaryDark">#075e54</color>
-    <color name="myText">#41a290</color>
-    <color name="myTextLight">#FFFFFF</color>
-    <color name="myLightBackground">#a7e6d7</color>
-    <color name="myTransparent">#8c128C7E</color>
-    <color name="myLayoutColor">#EEEEEE</color>
+    <!--Color By Nawa-->
+    <color name="orenJeruk">#f26627</color>
+    <color name="merah">#db4040</color>
+    <color name="ijo">#6bed47</color>
+    <color name="orenPudar">#f9a26c</color>
+    <color name="orenPutih">#efeeee</color>
+    <color name="putih">#ffffff</color>
+    <color name="biruPudar">#9bd7d1</color>
+    <color name="biruMatang">#325879</color>
+    <color name="biru">#2962ff</color>
 
     <!--pallete one-->
     <color name="pantoneDark331c">#017787</color>
@@ -30,11 +23,12 @@
     <color name="pantoneDarkTransparent">#8c017787</color>
     <color name="pantone331c">#05c3de</color>
 
-
-    <!--Color By Nawa-->
-    <color name="orenJeruk">#f26627</color>
-    <color name="orenPudar">#f9a26c</color>
-    <color name="orenPutih">#efeeee</color>
-    <color name="biruPudar">#9bd7d1</color>
-    <color name="biruMatang">#325879</color>
+    <!--My Color-->
+    <color name="myPrimary">#128C7E</color>
+    <color name="myPrimaryDark">#075e54</color>
+    <color name="myText">#41a290</color>
+    <color name="myTextLight">#FFFFFF</color>
+    <color name="myLightBackground">#a7e6d7</color>
+    <color name="myTransparent">#8c128C7E</color>
+    <color name="myLayoutColor">#EEEEEE</color>
 </resources>
